--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		background: transparent;
 	}
 	::-webkit-scrollbar-thumb {
-		background: rgba(var(--md-accent-color-rgb), 0.1);
+		background: rgba(var(--md-accent-color-secondary-rgb), 0.1);
 	}
 	.g-hd, .m-player, .m-player, .m-player .spk.z-silence:after {
 		background: transparent;
@@ -105,7 +105,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		right: 240px;
 		top: 50%;
 		transform: translateY(-50%);
-		color: var(--md-accent-color);
+		color: var(--md-accent-color-secondary);
 		opacity: .5 !important;
 		#time-passed {
 			display: inline-block;
@@ -230,7 +230,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		box-shadow: none;
 		height: 36px;
 		span {
-			color: var(--md-accent-color);
+			color: var(--md-accent-color-secondary);
 			font-size: 15px;
 			line-height: 36px;
 		}
@@ -247,19 +247,19 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		}
 		h3 .title {
 			max-width: calc(50vw - 230px);
-			color: rgba(var(--md-accent-color-rgb), 0.85);
+			color: rgba(var(--md-accent-color-secondary-rgb), 0.85);
 			.s-fc4 {
-				color: rgba(var(--md-accent-color-rgb), 0.35);
+				color: rgba(var(--md-accent-color-secondary-rgb), 0.35);
 			}
 		}
 		.j-title:last-child { // artist container
-			color: #ffffff66;
+			color: rgba(var(--md-accent-color-grey-base-rgb), 0.4);
 			font-size: 12px;
 			margin-top: 2px;
 			.artist {
-				color: rgba(var(--md-accent-color-rgb), 0.65);
+				color: rgba(var(--md-accent-color-secondary-rgb), 0.65);
 				&:hover {
-					color: rgba(var(--md-accent-color-rgb), 0.8) !important;
+					color: rgba(var(--md-accent-color-secondary-rgb), 0.8) !important;
 				}
 			}
 		}
@@ -279,8 +279,9 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				right: 5px;
 				left: unset;
 				transition: all .2s ease;
+				background-color: rgba(var(--md-accent-color-bg-rgb), 0.5);
 				svg {
-					fill: rgba(var(--md-accent-color-rgb), 0.6);
+					fill: rgba(var(--md-accent-color-secondary-rgb), 0.6);
 					width: 20px;
 					left: 2px;
 					top: 0;
@@ -292,8 +293,8 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					transform: scale(1.1);
 				}
 				&:hover svg {
-					fill: rgba(var(--md-accent-color-rgb), 1);
-					stroke: rgba(var(--md-accent-color-rgb), 1);
+					fill: rgba(var(--md-accent-color-secondary-rgb), 1);
+					stroke: rgba(var(--md-accent-color-secondary-rgb), 1);
 				}
 			}
 		}
@@ -398,6 +399,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		z-index: 151;
 	}
 	.g-sd .m-nav{
+		overflow-y: scroll;
 		&:not(:hover)::-webkit-scrollbar-thumb {
 			background: transparent;
 		}
@@ -407,7 +409,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 
 		// tabs
 		ul li a {
-			color: rgba(var(--md-accent-color-rgb), 0.9) !important;
+			color: rgba(var(--md-accent-color-secondary-rgb), 0.9) !important;
 			border-radius: 100px !important;
 			margin-left: 5px !important;
 			padding-left: 35px;
@@ -415,11 +417,11 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			line-height: 40px;
 			transition: background-color .2s ease;
 			svg {
-				fill: rgba(var(--md-accent-color-rgb), 1);
+				fill: rgba(var(--md-accent-color-secondary-rgb), 1);
 				left: 10px;
 			}
 			&:hover {
-				background: rgba(var(--md-accent-color-rgb), 0.05);
+				background: rgba(var(--md-accent-color-secondary-rgb), 0.05);
 			}
 			&::before {
 				content: '';
@@ -451,32 +453,32 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			left: 12px;
 		}
 		ul.my li a {
-			color: rgba(var(--md-accent-color-rgb), 0.8) !important;
+			color: rgba(var(--md-accent-color-secondary-rgb), 0.8) !important;
 			svg{
-				fill: rgba(var(--md-accent-color-rgb), 0.8);
+				fill: rgba(var(--md-accent-color-secondary-rgb), 0.8);
 			}
 		}
 
 		// section titles
 		h2 {
-			color: rgba(var(--md-accent-color-rgb), 0.5);
+			color: rgba(var(--md-accent-color-secondary-rgb), 0.5);
 			margin-left: -5px;
 			svg {
-				fill: rgba(var(--md-accent-color-rgb), 0.5);
+				fill: rgba(var(--md-accent-color-secondary-rgb), 0.5);
 			}
 		}
 
 		// new list button
 		.newlist::before, .newlist::after {
-			background: rgba(var(--md-accent-color-rgb), 0.7);
+			background: rgba(var(--md-accent-color-secondary-rgb), 0.7);
 		}
 
 		// heartbeat mode button
 		ul li.lke .heartbeat{
-			border-color: rgba(var(--md-accent-color-rgb), 0.1);
+			border-color: rgba(var(--md-accent-color-secondary-rgb), 0.1);
 			transition: all .25s ease;
 			svg {
-				fill: rgba(var(--md-accent-color-rgb), 0.7);
+				fill: rgba(var(--md-accent-color-secondary-rgb), 0.7);
 				transition: all .25s ease;
 			}
 			&:hover{
@@ -520,15 +522,15 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					bottom: 0;
 					border-radius: 100px;
 					position: absolute;
-					background-color: rgba(var(--md-accent-color-rgb), 1);
+					background-color: rgba(var(--md-accent-color-secondary-rgb), 1);
 					-webkit-mask-repeat: no-repeat;
 					-webkit-mask-position: center;
 				}
 				&:hover {
-					background-color: rgba(var(--md-accent-color-rgb), 0.1);
+					background-color: rgba(var(--md-accent-color-secondary-rgb), 0.1);
 				}
 				&.z-dis::before {
-					background-color: rgba(var(--md-accent-color-rgb), 0.2);
+					background-color: rgba(var(--md-accent-color-secondary-rgb), 0.2);
 				}
 				svg {
 					display: none;
@@ -547,16 +549,16 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				background-color: rgba(var(--md-accent-color-rgb), 0.06);
 				padding-left: 36px;
 				transition: all .25s ease;
-				color: rgba(var(--md-accent-color-rgb), 0.8);
+				color: rgba(var(--md-accent-color-secondary-rgb), 0.8);
 				&::placeholder {
-					color: rgba(var(--md-accent-color-rgb), 0.3) !important;
+					color: rgba(var(--md-accent-color-secondary-rgb), 0.3) !important;
 				}
 			}
 			input:focus {
 				background-color: rgba(var(--md-accent-color-rgb), 0.12);
 			}
 			.sch-btn {
-				background-color: rgba(var(--md-accent-color-rgb), 1);
+				background-color: rgba(var(--md-accent-color-secondary-rgb), 1);
 				transform: translateY(2px);
 				transition: all .25s ease;
 
@@ -580,6 +582,10 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			&:hover {
 				background-color: rgba(var(--md-accent-color-rgb), 0.12);
 			}
+			.name, .tovip {
+				color: rgba(var(--md-accent-color-grey-base-rgb), 0.8);
+				fill: rgba(var(--md-accent-color-grey-base-rgb), 0.8);
+			}
 		}
 		.j-listentosong a{
 			background-color: transparent;
@@ -595,10 +601,10 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			padding-right: 0px;
 			margin-right: 2px;
 			&:hover {
-				background-color: rgba(var(--md-accent-color-rgb), 0.1);
+				background-color: rgba(var(--md-accent-color-secondary-rgb), 0.1);
 			}
 			svg {
-				background-color: rgba(var(--md-accent-color-rgb), 0.7);
+				background-color: rgba(var(--md-accent-color-secondary-rgb), 0.7);
 				transition: all .25s ease;
 				-webkit-mask-repeat: no-repeat;
 				-webkit-mask-position: center;
@@ -607,7 +613,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				margin: 0;
 			}
 			&:hover svg {
-				background-color: rgba(var(--md-accent-color-rgb), 1);
+				background-color: rgba(var(--md-accent-color-secondary-rgb), 1);
 			}
 		}
 		.skin svg {
@@ -646,11 +652,11 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			justify-content: center;
 			margin-right: 2px;
 			&:hover {
-				background-color: rgba(var(--md-accent-color-rgb), 0.1);
+				background-color: rgba(var(--md-accent-color-secondary-rgb), 0.1);
 			}
 		}
 		.icn svg{
-			background-color: rgba(var(--md-accent-color-rgb), 1);
+			background-color: rgba(var(--md-accent-color-secondary-rgb), 1);
 			-webkit-mask-repeat: no-repeat;
 			-webkit-mask-position: center;
 			fill: none;
@@ -691,7 +697,6 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		justify-content: center;
 	}
 	.m-tab, .u-tab2 > ul:not(.u-stab), ul.u-tab2 {
-		background: #fff;
 		border-radius: 200px;
 		background-color: rgba(var(--md-accent-color-rgb), 0.053);
 		width: max-content;
@@ -709,7 +714,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				background: rgba(var(--md-accent-color-rgb), 0.05);
 			}
 			a {
-				color: rgba(var(--md-accent-color-rgb), 0.9) !important;
+				color: rgba(var(--md-accent-color-secondary-rgb), 0.9) !important;
 				display: flex;
 				justify-content: center;
 				align-items: center;
@@ -720,7 +725,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					display: none;
 				}
 				.j-flag {
-					color: rgba(var(--md-accent-color-rgb), 0.9) !important;
+					color: rgba(var(--md-accent-color-secondary-rgb), 0.9) !important;
 				}
 			}
 			a::before {
@@ -816,7 +821,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				a, a * {
 					font-size: 16px;
 					font-weight: bold;
-					color: var(--md-accent-color);
+					color: var(--md-accent-color-secondary);
 					line-height: 1.5;
 					.subtitle {
 						font-size: 14px;
@@ -857,7 +862,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			top: 0;
 			left: 2px;
 			font-size: 30px;
-			color: var(--md-accent-color);
+			color: var(--md-accent-color-secondary);
 			padding-top: 10px;
 			font-weight: bold;
 		}
@@ -888,7 +893,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					a, a *{
 						font-size: 16px;
 						font-weight: bold;
-						color: var(--md-accent-color);
+						color: var(--md-accent-color-secondary);
 						line-height: 1.5;
 					}
 					a::before {
@@ -940,7 +945,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		h2{
 			display: block;
 			font-size: 24px;
-			color: var(--md-accent-color);
+			color: var(--md-accent-color-secondary);
 			font-weight: normal;
 		}
 		.morelink{
@@ -979,7 +984,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					display: block;
 					font-size: 70px;
 					line-height: 1;
-					color: var(--md-accent-color);
+					color: var(--md-accent-color-secondary);
 					margin-bottom: 10px;
 					.f-ust {
 						font-weight: normal;
@@ -997,7 +1002,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					cursor: pointer;
 					svg {
 						-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='40' width='40'%3E%3Cpath d='M20 35v-3.167l8.958-8.916 3.125 3.125L23.167 35ZM5 26.375v-2.75h12.208v2.75Zm28.667-1.917-3.125-3.125 1.208-1.208q.375-.375.958-.375.584 0 .959.375l1.208 1.208q.375.375.375.959 0 .583-.375.958ZM5 19.583v-2.791h19.167v2.791Zm0-6.791V10h19.167v2.792Z'/%3E%3C/svg%3E");
-						background-color: var(--md-accent-color);
+						background-color: var(--md-accent-color-secondary);
 						-webkit-mask-repeat: no-repeat;
 						-webkit-mask-position: center;
 						-webkit-mask-size: 60%;
@@ -1007,7 +1012,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						max-height: unset;
 					}
 					&:hover {
-						background-color: rgba(var(--md-accent-color-rgb), 0.1);
+						background-color: rgba(var(--md-accent-color-secondary-rgb), 0.1);
 					}
 				}
 			}
@@ -1142,7 +1147,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						left: 50%;
 						opacity: 0;
 						background: var(--md-accent-color-bg-darken);
-						color: var(--md-accent-color);
+						color: var(--md-accent-color-secondary);
 						border-radius: 10px;
 						transform: translate(-50%, 10px);
 						box-shadow: none;
@@ -1164,11 +1169,11 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				margin-top: 5px;
 				margin-bottom: 8px;
 				.uname {
-					color: var(--md-accent-color);
+					color: var(--md-accent-color-secondary);
 					font-weight: bold;
 				}
 				.time {
-					color: var(--md-accent-color);
+					color: var(--md-accent-color-secondary);
 					opacity: .35;
 				}
 			}
@@ -1178,7 +1183,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				align-items: center;
 				margin-top: 10px;
 				span:first-child {
-					background-color: var(--md-accent-color);
+					background-color: var(--md-accent-color-secondary);
 					color: transparent;
 					display: inline-block;
 					width: 20px;
@@ -1193,14 +1198,14 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					display: none;
 				}
 				a {
-					color: rgba(var(--md-accent-color-rgb), .7);
-					border: 1px solid rgba(var(--md-accent-color-rgb), .3);
+					color: rgba(var(--md-accent-color-secondary-rgb), .7);
+					border: 1px solid rgba(var(--md-accent-color-secondary-rgb), .3);
 					padding: 2px 10px;
 					margin-left: -5px;
 					border-radius: 10px;
 					transition: all .25s ease;
 					&:hover {
-						background-color: rgba(var(--md-accent-color-rgb), .8);
+						background-color: rgba(var(--md-accent-color-secondary-rgb), .8);
 						color: var(--md-accent-color-bg);
 					}
 				}
@@ -1211,7 +1216,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					display: inline-flex;
 					align-items: center;
 					span:first-child {
-						background-color: var(--md-accent-color);
+						background-color: var(--md-accent-color-secondary);
 						color: transparent;
 						display: inline-block;
 						width: 20px;
@@ -1225,7 +1230,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						display: none;
 					}
 					span:last-child {
-						color: rgba(var(--md-accent-color-rgb), .7);
+						color: rgba(var(--md-accent-color-secondary-rgb), .7);
 						font-size: 16px;
 						font-weight: bold;
 					}
@@ -1241,17 +1246,17 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				margin-top: 10px;
 				> a{
 					svg {
-						fill: rgba(var(--md-accent-color-rgb), .5);
+						fill: rgba(var(--md-accent-color-secondary-rgb), .5);
 					}
 				}
 				p {
-					color: rgba(var(--md-accent-color-rgb), .5);
+					color: rgba(var(--md-accent-color-secondary-rgb), .5);
 					span:first-child, span:nth-child(2) {
 						display: none;
 					}
 				}
 				a {
-					color: var(--md-accent-color);
+					color: var(--md-accent-color-secondary);
 				}
 			}
 		}
@@ -1282,13 +1287,13 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						font-size: 15px;
 						transition: all .25s ease;
 						padding-left: 18px;
-						color: rgba(var(--md-accent-color-rgb), 0.8);
+						color: rgba(var(--md-accent-color-secondary-rgb), 0.8);
 						width: 100%;
 						overflow: hidden;
 						transform: translateX(-4px);
 						cursor: pointer;
 						&::placeholder {
-							color: rgba(var(--md-accent-color-rgb), 0.3) !important;
+							color: rgba(var(--md-accent-color-secondary-rgb), 0.3) !important;
 						}
 					}
 					&.z-edit, &:focus-within {
@@ -1305,6 +1310,9 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						-webkit-mask-repeat: no-repeat;
 						-webkit-mask-position: center;
 						-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='m15.938 17-4.98-4.979q-.625.458-1.375.719Q8.833 13 8 13q-2.083 0-3.542-1.458Q3 10.083 3 8q0-2.083 1.458-3.542Q5.917 3 8 3q2.083 0 3.542 1.458Q13 5.917 13 8q0 .833-.26 1.583-.261.75-.719 1.375L17 15.938ZM8 11.5q1.458 0 2.479-1.021Q11.5 9.458 11.5 8q0-1.458-1.021-2.479Q9.458 4.5 8 4.5q-1.458 0-2.479 1.021Q4.5 6.542 4.5 8q0 1.458 1.021 2.479Q6.542 11.5 8 11.5Z'/%3E%3C/svg%3E");
+						svg {
+							display: none;
+						}
 					}
 					&.z-edit .sch-btn {
 						-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='M6.062 15 5 13.938 8.938 10 5 6.062 6.062 5 10 8.938 13.938 5 15 6.062 11.062 10 15 13.938 13.938 15 10 11.062Z'/%3E%3C/svg%3E");
@@ -1326,9 +1334,10 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				margin-left: 10px;
 				width: calc(100% - 20px);
 				margin-bottom: 15px;
+				border: none;
 				.fix {
 					.col {
-						color: rgba(var(--md-accent-color-rgb), .35);
+						color: rgba(var(--md-accent-color-secondary-rgb), .35);
 						&:nth-of-type(1) {
 							width: 43px;
 							&::before {
@@ -1339,15 +1348,15 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				}
 				.flow {
 					.col {
-						color: rgba(var(--md-accent-color-rgb), .35);
+						color: rgba(var(--md-accent-color-secondary-rgb), .35);
 						border-radius: 6px;
 						transition: background-color .2s ease, color .2s ease;
 						&[data-res-action]:hover {
-							color: rgba(var(--md-accent-color-rgb), 1);
-							background-color: rgba(var(--md-accent-color-rgb), .1);
+							color: rgba(var(--md-accent-color-secondary-rgb), 1);
+							background-color: rgba(var(--md-accent-color-secondary-rgb), .1);
 						}
 						.icon-group {
-							color: rgba(var(--md-accent-color-rgb), 0.35);
+							color: rgba(var(--md-accent-color-secondary-rgb), 0.35);
 						}
 					}
 				}
@@ -1365,7 +1374,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					width: calc(100% - 20px);
 					transition: background-color .3s ease;
 					&:hover {
-						@include mixed-background-color-important(var(--md-accent-color-bg-rgb), var(--md-accent-color-rgb), 0.1);
+						@include mixed-background-color-important(var(--md-accent-color-bg-darken-rgb), var(--md-accent-color-rgb), 0.1);
 					}
 					.td {
 						height: $item-height;
@@ -1373,13 +1382,13 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						&.title {
 							font-size: 15px;
 							.tit {
-								color: rgba(var(--md-accent-color-rgb), .8);
+								color: rgba(var(--md-accent-color-secondary-rgb), .8) !important;
 								> span {
-									color: rgba(var(--md-accent-color-rgb), .3);
+									color: rgba(var(--md-accent-color-secondary-rgb), .3);
 								}
 								i, i svg{
 									opacity: 1;
-									fill: rgba(var(--md-accent-color-rgb), .8);
+									fill: rgba(var(--md-accent-color-secondary-rgb), .8);
 								}
 							}
 							i {
@@ -1387,16 +1396,16 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 							}
 						}
 						&.ellipsis a{
-							color: rgba(var(--md-accent-color-rgb), .5);
+							color: rgba(var(--md-accent-color-secondary-rgb), .5);
 							span {
-								color: rgba(var(--md-accent-color-rgb), .3);
+								color: rgba(var(--md-accent-color-secondary-rgb), .3);
 							}
 						}
 						&.ellipsis button.u-ibtn6{
 							top: 8px;
 							fill: #fff;
 							svg {
-								fill: rgba(var(--md-accent-color-rgb), .8);
+								fill: rgba(var(--md-accent-color-secondary-rgb), .8);
 							}
 						}
 					}
@@ -1416,7 +1425,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					line-height: $item-height;
 					width: 43px;
 					font-size: 16px;
-					color: rgba(var(--md-accent-color-rgb), .35);
+					color: rgba(var(--md-accent-color-secondary-rgb), .35);
 				}
 				.ico { // icons
 					height: 20px;
@@ -1706,7 +1715,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			&.z-play {
 				font-weight: bold;
 			}
-			a {
+			> a {
 				transform: translateY(-3px);
 			}
 			&::before {
