--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1441,6 +1441,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 						background-color: var(--md-accent-color);
 						-webkit-mask-repeat: no-repeat;
 						-webkit-mask-position: center;
+						-webkit-mask-size: unset;
 					}
 					&[data-res-action='like'] {
 						-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='m10 17-1.042-.938q-2.083-1.854-3.437-3.177-1.354-1.323-2.136-2.354Q2.604 9.5 2.302 8.646 2 7.792 2 6.896q0-1.854 1.271-3.125T6.396 2.5q1.021 0 1.979.438.958.437 1.625 1.229.667-.792 1.625-1.229.958-.438 1.979-.438 1.854 0 3.125 1.271T18 6.896q0 .896-.292 1.729-.291.833-1.073 1.854-.781 1.021-2.145 2.365-1.365 1.344-3.49 3.26Zm0-2.021q1.938-1.729 3.188-2.948 1.25-1.219 1.989-2.125.74-.906 1.031-1.614.292-.709.292-1.396 0-1.229-.833-2.063Q14.833 4 13.604 4q-.729 0-1.364.302-.636.302-1.094.844L10.417 6h-.834l-.729-.854q-.458-.542-1.114-.844Q7.083 4 6.396 4q-1.229 0-2.063.833-.833.834-.833 2.063 0 .687.271 1.364.271.678.989 1.573.719.896 1.98 2.125Q8 13.188 10 14.979Zm0-5.5Z'/%3E%3C/svg%3E");
@@ -1457,6 +1458,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 							background-color: var(--md-accent-color);
 							-webkit-mask-repeat: no-repeat;
 							-webkit-mask-position: center;
+							-webkit-mask-size: unset;
 							-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='M5.5 16q-.625 0-1.062-.438Q4 15.125 4 14.5V13h1.5v1.5h9V13H16v1.5q0 .625-.438 1.062Q15.125 16 14.5 16Zm4.5-3L6 9l1.062-1.062 2.188 2.187V3h1.5v7.125l2.188-2.187L14 9Z'/%3E%3C/svg%3E");
 						}
 						&:not([data-res-action='download']){
@@ -1469,6 +1471,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 							span.u-icn-dld_ok, span.u-icn-dld_ready{
 								-webkit-mask-repeat: no-repeat;
 								-webkit-mask-position: center;
+								-webkit-mask-size: unset;
 								-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='m8.938 13 4.958-4.938L12.833 7l-3.895 3.875-1.771-1.75-1.063 1.063ZM10 18q-1.646 0-3.104-.625-1.458-.625-2.552-1.719t-1.719-2.552Q2 11.646 2 10q0-1.667.625-3.115.625-1.447 1.719-2.541Q5.438 3.25 6.896 2.625T10 2q1.667 0 3.115.625 1.447.625 2.541 1.719 1.094 1.094 1.719 2.541Q18 8.333 18 10q0 1.646-.625 3.104-.625 1.458-1.719 2.552t-2.541 1.719Q11.667 18 10 18Z'/%3E%3C/svg%3E");
 								transform: translateY(-1px);
 								svg {
