Update version to 1.0.2

--- a/src/ncm-css-override.css
+++ b/src/ncm-css-override.css
@@ -123,3 +123,6 @@
 .u-arrlay .msghd {
     background: var(--md-accent-color-bg-darken);
 }
+div.m-layer .lyct, div.m-layer, div.m-layer .zcnt {
+    background: var(--md-accent-color-bg);
+}
