--- a/src/styles.scss
+++ b/src/styles.scss
@@ -292,6 +292,38 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='M13 15q-1.042 0-1.771-.729-.729-.729-.729-1.771 0-1.042.729-1.771Q11.958 10 13 10q.271 0 .521.052t.479.156V4h4v1.5h-2.5v7q0 1.042-.729 1.771Q14.042 15 13 15ZM3 11.5V10h6v1.5Zm0-3V7h9v1.5Zm0-3V4h9v1.5Z'/%3E%3C/svg%3E");
 			-webkit-mask-position-y: 65%;
 		}
+		.list .m-queuenotify {
+			position: fixed;
+			bottom: calc(var(--bottombar-height) - 20px);
+			border-radius: 12px;
+			background: rgba(var(--md-accent-color-bg-rgb), 0.9);
+			color: var(--md-accent-color-secondary);
+			transform-origin: bottom;
+			border: none;
+			box-sizing: content-box;
+			padding: 8px 25px;
+			box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 8%);
+			font-size: 16px;
+			cursor: pointer;
+			transition: opacity .2s ease;
+			&:not(.f-dn) {
+				opacity: 1;
+				animation: queuenotify-show 0.2s ease both;
+			}
+			&.f-dn {
+				display: block !important;
+				opacity: 0;
+				pointer-events: none;
+			}
+			@keyframes queuenotify-show {
+				0% {
+					transform: scaleY(0.9) translateY(50%);
+				}
+				100% {
+					transform: none;
+				}
+			}
+		}
 	}
 	// Player: tooltips
 	.u-result.u-result-play .inner {
@@ -574,7 +606,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 	// Header
 	header.g-hd {
 		.m-leftbox {
-			left: 190px;
+			left: calc(190px + var(--offset, 0px));
 			&::after {
 				display: none;
 			}
@@ -1816,6 +1848,9 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 			&:hover {
 				background: rgba(var(--md-accent-color-rgb), 0.12) !important;
 			}
+			&.z-sel {
+				background: rgba(var(--md-accent-color-rgb), 0.18) !important;
+			}
 			&.z-play {
 				font-weight: bold;
 			}
@@ -1864,6 +1899,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		bottom: calc(var(--bottombar-height) + 15px);
 		border-radius: 12px;
 		background: rgba(var(--md-accent-color-bg-rgb), 0.9);
+		color: var(--md-accent-color-secondary);
 		transform-origin: bottom;
 		animation: snackbar-show 0.2s ease both;
 		.errTxt {
