--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1531,7 +1531,7 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 					}
 				}
 			}
-			> ul {
+			> ul, .head + .j-flag {
 				background: var(--md-accent-color-bg-darken);
 				border-radius: 16px;
 				padding-top: 10px;
@@ -1662,6 +1662,10 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 								transform: translate(1px, -1px);
 							}
 						}
+					}
+					&.ico-mv {
+						margin-top: 4px;
+						width: 28px;
 					}
 				}
 				&.m-plylist {
